--- a/public/scss/ui/_header.scss
+++ b/public/scss/ui/_header.scss
@@ -26,13 +26,22 @@
   height: 100%;
   padding-bottom: 10px;
 }
-.user-image {
-  img {
-    width: 40px
+
+.user-name {
+  position: relative;
+  p {
+    margin: 0;
   }
 }
-.user-name {
-  h4 {
-    margin-bottom: 0;
-  }
+
+.user-name:before {
+  content: '';
+  height: 40px;
+  width: 40px;
+  left: -25px;
+  top: -6px;
+  position: absolute;
+  background-image: url('../assets/images/user.png');
+  background-position: center;
+  background-size: contain;
 }
